# grid nerds: add js for contact's form; fix z-index conflict between slider and contacts; fix interactivity btn on contact's form

--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,7 @@ h4 {
   position: absolute;
   bottom: 83px;
   left: 402px;
-  z-index: 100;
+  z-index: 95;
 
   width: 100%;
 }
@@ -1474,7 +1474,7 @@ h4 {
   position: absolute;
   top: 10px;
   left: 10px;
-  z-index: 100;
+  z-index: 90;
 
   width: 100%;
 }
@@ -1659,10 +1659,11 @@ h4 {
 }
 /* END catalog page*/
 
-.model-content {
+.modal-content {
   position: absolute;
   top: 0;
   left: 50%;
+  z-index: 110;
 
   width: 460px;
   margin-top: 280px;
@@ -1676,7 +1677,7 @@ h4 {
   box-shadow: 0 20px 40px rgba(0, 1, 1, 0.75);
 }
 
-.model-content-close {
+.modal-content-close {
   position: absolute;
   top: 6px;
   right: 6px;
@@ -1692,11 +1693,11 @@ h4 {
   cursor: pointer;
 }
 
-.model-content-close:hover {
+.modal-content-close:hover {
   background-color: #d6494d;
 }
 
-.model-content-close:active {
+.modal-content-close:active {
   background-color: #d6494d;
   box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0.15);
 }
@@ -1745,17 +1746,19 @@ h4 {
   border-color: #56bffb;
 }
 
-
-.feedback-form .textarea {
-  width: 460px;
-  margin: 0;
-  margin-top: 10px;
-}
-
 .feedback-form textarea {
   width: 426px;
   height: 110px;
+  margin: 0;
+  margin-top: 10px;
   margin-bottom: 48px;
+}
+
+.feedback-form textarea:hover {
+  border-color: #a2a9ac;
+}
+.feedback-form textarea:focus {
+  border-color: #56bffb;
 }
 
 .feedback-form .btn {
@@ -1772,23 +1775,53 @@ h4 {
 
   background-color: #f1f1f1;
   border: none;
-
-  pointer-events: none;
 }
 
-.feedback-form.btn.active {
+.feedback-form .btn.active {
   color: #ffffff;
 
   background-color: #fb565a;
-
-  pointer-events: all;
 }
 
-.feedback-form.btn.active:hover {
+.feedback-form .btn.active:hover {
   background-color: #d6494d;
 }
 
-.feedback-form.btn.active:active {
+.feedback-form .btn.active:active {
   background-color: #d6494d;
   box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0.15);
+}
+
+.show-contacts-form {
+  position: fixed;
+
+  display: block;
+
+  animation: appearance 0.6s;
+}
+
+@keyframes appearance {
+  0% {
+    opacity: 0.1;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  40% {
+    opacity: 0.4;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.modal-error {
+  background-color: #fb565a;
+
+  transition: background-color 1s linear;
 }
